--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,14 @@ header .icons i:hover {
 
 
 .home .content h3 {
-  font-size: 4rem;
+  font-size: 20px;
   color: #fff;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.1);
   opacity: 0.3;
+  position: absolute;
+  bottom: 0;
+  left: 450px;
 }
 .home .video-container video {
   position: absolute;
@@ -182,7 +185,7 @@ header .icons i:hover {
   text-align: center;
   background: rgba(0, 0, 0, 0.7);
   padding: 2rem;
-  opacity: 0;
+  opacity: 0.5;
   transition: 1s;
   text-transform: none;
 }
