--- a/css/train.css
+++ b/css/train.css
@@ -29,7 +29,7 @@
   .overview .container {
     padding-top: 10px;
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-    height: 60vh;
+    min-height: 60vh;
   }
   
   .overview .container img {
@@ -74,6 +74,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    min-height: 600px;
 
   }
 
