--- a/css/details.css
+++ b/css/details.css
@@ -27,7 +27,6 @@
   bottom: 0;
 }
 
-
 .details .container img {
   height: 300px;
   width: 500px;
@@ -64,18 +63,11 @@
   height: 200px;
 }
 
+.details .videos {
+  display: flex;
+}
+
 .details .map iframe{
   width: 100%;
   height: 500px;
-}
-
-.booknow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 10px 0px;
-}
-
-.booknow a {
-  padding: 5px 100px;
 }
