--- a/css/style.css
+++ b/css/style.css
@@ -209,13 +209,14 @@ header .icons i:hover {
 }
 
 .railway .container .card {
-  flex: 1 1 20rem;
+  border: 1rem solid #fff;
   border-radius: 0.5rem;
   overflow: hidden;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
   position: relative;
   margin-top: 10px;
   transition: transform 0.3s;
+  flex: 1 1 27rem;
 }
 
 .railway .container .card:hover {
